[tool.poetry]
name = "vt"
version = "0.0.1"
description = "Simple API wrapper for VirusTotal"
authors = ["t-a-y-l-o-r <tcochran.dev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
