[tool.poetry]
name = "vt-restful"
version = "0.0.11"
description = "Simple API wrapper for VirusTotal"
authors = ["t-a-y-l-o-r <tcochran.dev@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "vt"}]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
pudb = "^2022.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flakeheaven]
base = "https://raw.githubusercontent.com/flakeheaven/flakeheaven/master/pyproject.toml"
exclude = ["README.rst", "README.md"]
format = "grouped"
show_source = true
